apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: node-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: node-api

  template:
    metadata:
      labels:
        app: node-api

    spec:
      containers:
        - name: node-api

          image: developerkingabhi/api-project:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
