apps/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: node-api-service

spec:
  selector:
    app: node-api

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
