apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: node-api-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: api.yourdomain.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: node-api-service

                port:
                  number: 80
